# opencall-workbook

./: .gitignore  Cargo.toml  README.md
src/: about.rs  guide.rs  main.rs  open_call.rs  workbook.rs
src/workbook/: app.rs  chapter.rs  editor.rs  legacy_formats.rs  note.rs  project.rs  renderer.rs  sections.rs  store.rs  visuals.rs
src/workbook/legacy_formats/: conversion.rs  v_b0002.rs  v_b0003.rs
src/workbook/sections/: attachments.rs  budget.rs  funding.rs  idea.rs  literature.rs  methodology.rs  outcomes.rs  prelim_results.rs  references.rs  resources.rs  scope.rs  scripting.rs  team.rs  timeline.rs  working_name.rs
src/workbook/store/: open.rs  save.rs  v_b0004.rs
