[package]
name = "opencall-workbook"
version = "0.8.2"
edition = "2021"

authors = ["Quantrake <sd@quantrake.com>"]
description = "Narrative editor for research funding applications"

[dependencies]
egui = "0.27.1"
eframe = { version = "0.27.1", default-features = false, features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    # "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
] }

# Extra functionality and widgets for the egui GUI library.
egui_extras = { version = "0.27.1", features = ["chrono"] }

bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4"
rfd = "0.14.1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Fast and small wasm.
[profile.release]
opt-level = 2
